--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <h2>Title</h2>
-    <div class="box">
-      <h2>Sub Title</h2>
-      <button>A</button>
-    </div>
-    <button>B</button>
+    <a href="/">extend</a>
+    <button type="button">extend</button>
   </body>
 </html>
