--- a/src/grid-template-areas.html
+++ b/src/grid-template-areas.html
@@ -3,27 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid Basic Concept</title>
+    <title>Grid Template Areas</title>
     <link rel="stylesheet" href="css/grid-template-areas.css" />
   </head>
 
   <body>
     <header>
-      <h1>Grid Basic Concept</h1>
+      <h1>Grid Template Areas</h1>
     </header>
     <div class="sample">
-      <div class="fater">
-        <div class="children">1</div>
-        <div class="children">2</div>
-        <div class="children">3</div>
-        <div class="children">1</div>
-        <div class="children">2</div>
-        <div class="children">3</div>
-        <div class="children">1</div>
-        <div class="children">2</div>
-        <div class="children">3</div>
-        <div class="children">1</div>
-        <div class="children">2</div>
+      <div class="grid">
+        <div class="header">header</div>
+        <div class="content">content</div>
+        <div class="nav">nav</div>
+        <div class="footer">footer</div>
       </div>
     </div>
 
@@ -31,21 +24,40 @@
       <div class="style">
         <h1>style</h1>
         <pre><code>
-          .fater {
-            display: grid;
-            grid-template-columns: 30% 30% 30%;
-            grid-template-rows: 100px 150px;
-            gap: 20px;
-          
-            .children {
-              background: $color-point-second;
-              color: $color_point;
-              font-size: 3rem;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-            }
-          }
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(5, 100px) 50px;
+        grid-template-rows: 40px repeat(3, 70px) 30px;
+        grid-template-areas:
+            'header header header header header header'
+            'content content content content content nav'
+            'content content content content content nav'
+            'content content content content content nav'
+            'footer footer footer footer footer footer';
+        .header {
+            grid-area: header;
+            background-color: $color-point;
+            color: $color-bg;
+            padding: 10px;
+        }
+        .content {
+            grid-area: content;
+            background-color: $color-point-second;
+            padding: 10px;
+        }
+        .nav {
+            grid-area: nav;
+            background-color: $color-point-light;
+            color: $color-point;
+            padding: 10px;
+        }
+        .footer {
+            grid-area: footer;
+            background-color: $color-main;
+            color: $color-bg;
+            padding: 10px;
+        }
+    }
         </code></pre>
       </div>
     </div>
